# typed_stream

./: .gitignore  .pyre_configuration  Makefile  README.md  check.sh  check_types.sh  generate-badge.sh  pyproject.toml  requirements-dev.txt  setup.cfg  typed_stream.py
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  check-pr.yml  check.yml  codeql.yml  release.yml
examples/: __init__.py  calculator.py  factoradic.py  head.py  nth_prime.sh  print_primes.py  tail.py
examples/test/: __init__.py  __main__.py
test/: __main__.py  input.txt  test_functions.py
tests/: __init__.py  __main__.py  test_functions.py
typed_stream/: __init__.py  __main__  __main__.py  _cli_argument_parser.py  _iteration_utils.py  _lazy_file_iterators.py  _self.py  _types.py  _typing.py  _utils.py  common_types.py  constants.py  exceptions.py  file_streams.py  functions.py  iteration_utils.py  lazy_file_iterators.py  stream.py  stream_abc.py  streamable.py  streams.py  types.py  utils.py  version.py
typed_stream/_impl/: __init__.py  _default_value.py  _iteration_utils.py  _lazy_file_iterators.py  _types.py  _typing.py  _utils.py  exceptions.py  file_streams.py  functions.py  stream.py  stream_abc.py  streamable.py
