[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "typed_stream"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Joshix", email = "joshix@asozial.org"}]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Joshix-1/typed_stream"

[tool.bandit]
skips = ["B311"]

[tool.black]
target-version = ["py310", "py311"]
line-length = 80

[tool.isort]
atomic = true
profile = "black"
py_version = "310"
line_length = 80
skip_gitignore = true

[tool.mypy]
strict = true
sqlite_cache = true
python_version = "3.10"
warn_unreachable = true
show_error_codes = true
