[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "typed_stream"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Joshix", email = "joshix@asozial.org"}]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Joshix-1/typed_stream"

[tool.bandit]
skips = ["B311"]

[tool.black]
line-length = 80
target-version = ["py310", "py311"]

[tool.isort]
atomic = true
line_length = 80
profile = "black"
py_version = "310"
skip_gitignore = true
# sort_reexports = true

[tool.mypy]
packages = ["typed_stream", "test", "examples"]
python_version = "3.10"
show_error_codes = true
strict = true
enable_incomplete_feature = ["TypeVarTuple", "Unpack"]
warn_unreachable = true
pretty = true
disallow_any_unimported = true
warn_no_return = true
show_column_numbers = true
disallow_any_explicit = true
# disallow_any_expr = true
disallow_any_decorated = true
implicit_reexport = false

[tool.pytype]
inputs = ["typed_stream", "test", "examples"]
disable = ["not-supported-yet"]
python_version = "3.10"

[tool.pyright]
include = ["typed_stream", "test", "examples"]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
pythonVersion = "3.10"
reportMissingImports = true
reportMissingTypeStubs = true
# incompatible with mypy:
# reportUnnecessaryTypeIgnoreComment = "error"
