[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "typed_stream"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Joshix", email = "joshix@asozial.org"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Joshix-1/typed_stream"

[tool.bandit]
skips = ["B311"]

[tool.black]
line-length = 80
target-version = ["py310", "py311"]

[tool.isort]
atomic = true
line_length = 80
profile = "black"
py_version = "310"
skip_gitignore = true
# sort_reexports = true
add_imports = ["from __future__ import annotations"]

[tool.mypy]
packages = ["typed_stream", "tests", "examples"]
python_version = "3.10"
show_error_codes = true
strict = true
warn_unreachable = true
pretty = true
disallow_any_unimported = true
warn_no_return = true
show_column_numbers = true
disallow_any_explicit = true
# disallow_any_expr = true
disallow_any_decorated = true
implicit_reexport = false
enable_error_code = [
  "explicit-override",
  "ignore-without-code",
  "possibly-undefined",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
  "unused-awaitable",
]

[tool.pytype]
inputs = ["typed_stream", "tests", "examples"]
disable = ["not-supported-yet"]
none_is_not_bool = true
strict_none_binding = true
keep_going = true
overriding_renamed_parameter_count_checks = true
no_return_any = true
protocols = true
strict_parameter_checks = true
strict_undefined_checks = true
strict_primitive_comparisons = true

[tool.pyright]
include = ["typed_stream", "tests", "examples"]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
pythonVersion = "3.10"
reportMissingImports = true
reportMissingTypeStubs = true
# incompatible with mypy:
# reportUnnecessaryTypeIgnoreComment = "error"
